--- a/src/components/TimeLine/TimeLine.module.css
+++ b/src/components/TimeLine/TimeLine.module.css
@@ -141,8 +141,9 @@
     z-index: 900;
     position: absolute;
     bottom: 90px;
-    max-width: 70vw;
-    min-width: 30vw;
+    max-width: 900px;
+    min-width: 450px;
+    height: 70px;
     background-color: white;
     border-radius: 5px;
     left: 65vh;
@@ -157,7 +158,7 @@
     left: 64vh;
     z-index: 50;
     height: 35px;
-    position: relative;
+    position: absolute;
     font-size: 16px;
     border: none;
     border-radius: 5px;
