--- a/src/Pages/Users_guide/User_manual.module.css
+++ b/src/Pages/Users_guide/User_manual.module.css
@@ -32,7 +32,14 @@
 
 .rightBox{
     line-height: 3em;
-    font-size: 30px;
+    font-size: 20px;
+    width: 70%;
+    margin-left: 20%;
+}
+.rightBottomBox{
+    margin-top: 80px;
+    line-height: 3em;
+    font-size: 15px;
     width: 70%;
     margin-left: 20%;
 }
