--- a/src/components/TimeLine/TimeLine.module.css
+++ b/src/components/TimeLine/TimeLine.module.css
@@ -136,28 +136,29 @@
     visibility: hidden;
 }
 .divSlider{
-    float: left;
     margin-left: auto;
+    text-align: center;
     z-index: 900;
     position: absolute;
     bottom: 90px;
-    max-width: 900px;
-    min-width: 450px;
+    max-width: 700px;
+    min-width: 300px;
     height: 70px;
     background-color: white;
     border-radius: 5px;
-    left: 65vh;
-    right: 50vh;
+    right: 460px;
+    left: 100px;
     color: black;
     box-shadow: 0 0 0 2px rgba(0,0,0,0.25);
-    overflow-x: scroll;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 .val {
-    margin: -20px -5px;
-    top: 25px;
-    left: 64vh;
+    right: 1px;
     z-index: 50;
+    margin: 9px 5px ;
     height: 35px;
+    float: right;
     position: absolute;
     font-size: 16px;
     border: none;
