--- a/src/Pages/Authorization/Auth.module.css
+++ b/src/Pages/Authorization/Auth.module.css
@@ -183,3 +183,17 @@
 .restore p a:hover{
     text-decoration: underline;
 }
+.footer{
+    padding: 15px;
+    color: white;
+    backdrop-filter: blur(15px);
+    border-radius: 5px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: white;
+    position: absolute;
+    left: -10px;
+    bottom: -10px;
+    font-family: Gill Sans, sans-serif;
+    font-size: 13px;
+}
