--- a/src/components/MainNavBar/MainNavBar.module.css
+++ b/src/components/MainNavBar/MainNavBar.module.css
@@ -29,11 +29,23 @@
     font-weight: bold;
     font-family: Arial, serif;
 }
+.compositeList{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    /*grid-template-rows: repeat(1, 1fr);*/
+    grid-template-rows: repeat(3, 30px);
+    width: max-content;
+    max-width: 400px;
+    min-width: 400px;
+    padding-top: 10px;
+    padding-bottom: 37px;
+}
 .imagesComposite{
-    margin-top: -23px;
-    margin-left: 15px;
-    margin-bottom: -30px;
-    margin-right: -30px;
+    padding-bottom: 5px;
+    margin-top: 10px;
+    position: relative;
+    width: max-content;
+    height: 38px;
 }
 
 .navBarMainInstruments{
@@ -221,7 +233,7 @@
     float: left;
 }
 .divSwitch{
-    width: 300px;
+    width: 400px;
     margin-bottom: -25px;
     font-size: 15px;
     font-weight: bold;
