--- a/src/components/MainNavBar/MainNavBar.module.css
+++ b/src/components/MainNavBar/MainNavBar.module.css
@@ -12,6 +12,11 @@
     /*overflow-y: auto;*/
 
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: button;
+    margin: -7px;
+}
 .list{
     margin: 0 auto;
 }
@@ -33,19 +38,20 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     /*grid-template-rows: repeat(1, 1fr);*/
-    grid-template-rows: repeat(3, 30px);
+    grid-template-rows: repeat(3, 20px);
     width: max-content;
     max-width: 400px;
     min-width: 400px;
     padding-top: 10px;
-    padding-bottom: 37px;
+    padding-bottom: 60px;
 }
 .imagesComposite{
-    padding-bottom: 5px;
-    margin-top: 10px;
+    padding-top: -25px;
+    margin-bottom: 10px;
+    margin-top: 25px;
     position: relative;
     width: max-content;
-    height: 38px;
+    height: 0px;
 }
 
 .navBarMainInstruments{
@@ -234,8 +240,10 @@
 }
 .divSwitch{
     width: 400px;
-    margin-bottom: -25px;
-    font-size: 15px;
+    margin-top: -20px;
+    margin-bottom: -20px;
+    padding-bottom: -20px;
+    font-size: 14.5px;
     font-weight: bold;
     font-family: Arial, serif;
 }
